# SoapyTujaSDR

./: .gitignore  README.md
SoapyTujaSDR/: SoapyTujaSDR.cpp  SoapyTujaSDR.hpp  alsa.c  alsa.h  meson.build
SoapyTujaSDR.xcodeproj/: project.pbxproj
SoapyTujaSDR.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
